[tool.poetry]
name = "test-new-docs"
version = "0.1.0"
description = "test new docs"
authors = ["Chandrika Sivaramakrishnan <chandrika@pnnl.gov>"]
readme = "README.md"
packages = [{include = "test_new_docs"}]

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
